Bug 936583 - Make common chunk trailer use a common struct; r=billm

--HG--
extra : rebase_source : c9a34087a60cd5df0f3b7ec0c32b602ab1159611